--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <html>
 <head>
-<title>24:42 Project</title>
+<title>24:42 Project | Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <table width="1288" height="1024" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
 	<tr>
 		<td colspan="13">
-			<img src="images/index_01.png" width="1280" height="51" alt=""></td>
+			<img src="images/index/index_01.png" width="1280" height="51" alt=""></td>
 		<td width="10">
-			<img src="images/spacer.gif" width="1" height="51" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="51" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="5">
-			<img src="images/index_02.png" width="521" height="72" alt=""></td>
-		<td colspan="3" rowspan="3"><a href="index.html"><img src="images/index_03.png" width="238" height="159" alt=""></a></td>
+			<img src="images/index/index_02.png" width="521" height="72" alt=""></td>
+		<td colspan="3" rowspan="3"><a href="index.html"><img src="images/index/index_03.png" width="238" height="159" alt=""></a></td>
 		<td colspan="5">
-			<img src="images/index_04.png" width="521" height="72" alt=""></td>
+			<img src="images/index/index_04.png" width="521" height="72" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="72" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="72" alt=""></td>
 	</tr>
 	<tr>
 		<td width="275" rowspan="5">
-			<img src="images/index_05.png" width="275" height="901" alt=""></td>
-		<td width="89"><a href="index.html"><img src="images/index_06.png" width="89" height="37" alt=""></a></td>
+			<img src="images/index/index_05.png" width="275" height="901" alt=""></td>
+		<td width="89"><a href="index.html"><img src="images/index/index_06.png" width="89" height="37" alt=""></a></td>
 		<td width="41" rowspan="5">
-			<img src="images/index_07.png" width="41" height="901" alt=""></td>
-		<td width="84"><a href="index.html"><img src="images/index_08.png" width="84" height="37" alt=""></a></td>
+			<img src="images/index/index_07.png" width="41" height="901" alt=""></td>
+		<td width="84"><a href="index.html"><img src="images/index/index_08.png" width="84" height="37" alt=""></a></td>
 		<td width="32" rowspan="5">
-			<img src="images/index_09.png" width="32" height="901" alt=""></td>
+			<img src="images/index/index_09.png" width="32" height="901" alt=""></td>
 		<td width="39" rowspan="5">
-			<img src="images/index_10.png" width="39" height="901" alt=""></td>
-		<td width="103"><a href="index.html"><img src="images/index_11.png" width="103" height="37" alt=""></a></td>
+			<img src="images/index/index_10.png" width="39" height="901" alt=""></td>
+		<td width="103"><a href="index.html"><img src="images/index/index_11.png" width="103" height="37" alt=""></a></td>
 		<td width="19" rowspan="5">
-			<img src="images/index_12.png" width="19" height="901" alt=""></td>
-		<td width="69"><a href="index.html"><img src="images/index_13.png" width="69" height="37" alt=""></a></td>
+			<img src="images/index/index_12.png" width="19" height="901" alt=""></td>
+		<td width="69"><a href="index.html"><img src="images/index/index_13.png" width="69" height="37" alt=""></a></td>
 		<td width="291" rowspan="5">
-			<img src="images/index_14.png" width="291" height="901" alt=""></td>
+			<img src="images/index/index_14.png" width="291" height="901" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="37" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="37" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="4">
-			<img src="images/index_15.png" width="89" height="864" alt=""></td>
+			<img src="images/index/index_15.png" width="89" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/index_16.png" width="84" height="864" alt=""></td>
+			<img src="images/index/index_16.png" width="84" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/index_17.png" width="103" height="864" alt=""></td>
+			<img src="images/index/index_17.png" width="103" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/index_18.png" width="69" height="864" alt=""></td>
+			<img src="images/index/index_18.png" width="69" height="864" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="50" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="50" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<img src="images/index_19.png" width="238" height="621" alt=""></td>
+			<img src="images/index/index_19.png" width="238" height="621" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="621" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="621" alt=""></td>
 	</tr>
 	<tr>
 		<td width="84" rowspan="2">
-			<img src="images/index_20.png" width="84" height="193" alt=""></td>
-		<td width="70"><a href="https://twitter.com/2442Project" target="_new"><img src="images/index_21.png" width="70" height="71" alt="Twitter"></a></td>
+			<img src="images/index/index_20.png" width="84" height="193" alt=""></td>
+		<td width="70"><a href="https://twitter.com/2442Project" target="_new"><img src="images/index/index_21.png" width="70" height="71" alt="Twitter"></a></td>
 		<td width="84" rowspan="2">
-			<img src="images/index_22.png" width="84" height="193" alt=""></td>
+			<img src="images/index/index_22.png" width="84" height="193" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="71" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="71" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/index_23.png" width="70" height="122" alt=""></td>
+			<img src="images/index/index_23.png" width="70" height="122" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="122" alt=""></td>
+			<img src="images/index/spacer.gif" width="1" height="122" alt=""></td>
 	</tr>
 </table>
 </body>
