--- a/404.html
+++ b/404.html
@@ -10,71 +10,71 @@ permalink: /404.html
 <table id="Table_01" width="1281" height="1024" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="13">
-			<img src="images/404/404_01.png" width="1280" height="51" alt=""></td>
+			<img src="https://2442.nl/images/404/404_01.png" width="1280" height="51" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="51" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="51" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="5">
-			<img src="images/404/404_02.png" width="521" height="72" alt=""></td>
-		<td colspan="3" rowspan="3"><a href="index.html"><img src="images/404/404_03.png" width="238" height="159" alt=""></a></td>
+			<img src="https://2442.nl/images/404/404_02.png" width="521" height="72" alt=""></td>
+		<td colspan="3" rowspan="3"><a href="index.html"><img src="https://2442.nl/images/404/404_03.png" width="238" height="159" alt=""></a></td>
 		<td colspan="5">
-			<img src="images/404/404_04.png" width="521" height="72" alt=""></td>
+			<img src="https://2442.nl/images/404/404_04.png" width="521" height="72" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="72" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="72" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="5">
-			<img src="images/404/404_05.png" width="275" height="901" alt=""></td>
-		<td><a href="index.html"><img src="images/404/404_06.png" width="89" height="37" alt=""></a></td>
+			<img src="https://2442.nl/images/404/404_05.png" width="275" height="901" alt=""></td>
+		<td><a href="index.html"><img src="https://2442.nl/images/404/404_06.png" width="89" height="37" alt=""></a></td>
 		<td rowspan="5">
-			<img src="images/404/404_07.png" width="41" height="901" alt=""></td>
-		<td><a href="index.html"><img src="images/404/404_08.png" width="84" height="37" alt=""></a></td>
+			<img src="https://2442.nl/images/404/404_07.png" width="41" height="901" alt=""></td>
+		<td><a href="index.html"><img src="https://2442.nl/images/404/404_08.png" width="84" height="37" alt=""></a></td>
 		<td rowspan="5">
-			<img src="images/404/404_09.png" width="32" height="901" alt=""></td>
+			<img src="https://2442.nl/images/404/404_09.png" width="32" height="901" alt=""></td>
 		<td rowspan="5">
-			<img src="images/404/404_10.png" width="54" height="901" alt=""></td>
-		<td><a href="index.html"><img src="images/404/404_11.png" width="88" height="37" alt=""></a></td>
+			<img src="https://2442.nl/images/404/404_10.png" width="54" height="901" alt=""></td>
+		<td><a href="index.html"><img src="https://2442.nl/images/404/404_11.png" width="88" height="37" alt=""></a></td>
 		<td rowspan="5">
-			<img src="images/404/404_12.png" width="20" height="901" alt=""></td>
-		<td><a href="index.html"><img src="images/404/404_13.png" width="68" height="37" alt=""></a></td>
+			<img src="https://2442.nl/images/404/404_12.png" width="20" height="901" alt=""></td>
+		<td><a href="index.html"><img src="https://2442.nl/images/404/404_13.png" width="68" height="37" alt=""></a></td>
 		<td rowspan="5">
-			<img src="images/404/404_14.png" width="291" height="901" alt=""></td>
+			<img src="https://2442.nl/images/404/404_14.png" width="291" height="901" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="37" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="37" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="4">
-			<img src="images/404/404_15.png" width="89" height="864" alt=""></td>
+			<img src="https://2442.nl/images/404/404_15.png" width="89" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/404/404_16.png" width="84" height="864" alt=""></td>
+			<img src="https://2442.nl/images/404/404_16.png" width="84" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/404/404_17.png" width="88" height="864" alt=""></td>
+			<img src="https://2442.nl/images/404/404_17.png" width="88" height="864" alt=""></td>
 		<td rowspan="4">
-			<img src="images/404/404_18.png" width="68" height="864" alt=""></td>
+			<img src="https://2442.nl/images/404/404_18.png" width="68" height="864" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="50" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="50" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<img src="images/404/404_19.png" width="238" height="621" alt=""></td>
+			<img src="https://2442.nl/images/404/404_19.png" width="238" height="621" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="621" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="621" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img src="images/404/404_20.png" width="84" height="193" alt=""></td>
-		<td><a href="https://twitter.com/2442Project"><img src="images/404/404_21.png" width="70" height="71" alt="Twitter"></a></td>
+			<img src="https://2442.nl/images/404/404_20.png" width="84" height="193" alt=""></td>
+		<td><a href="https://twitter.com/2442Project"><img src="https://2442.nl/images/404/404_21.png" width="70" height="71" alt="Twitter"></a></td>
 		<td rowspan="2">
-			<img src="images/404/404_22.png" width="84" height="193" alt=""></td>
+			<img src="https://2442.nl/images/404/404_22.png" width="84" height="193" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="71" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="71" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/404/404_23.png" width="70" height="122" alt=""></td>
+			<img src="https://2442.nl/images/404/404_23.png" width="70" height="122" alt=""></td>
 		<td>
-			<img src="images/404/spacer.gif" width="1" height="122" alt=""></td>
+			<img src="https://2442.nl/images/404/spacer.gif" width="1" height="122" alt=""></td>
 	</tr>
 </table>
 </body>
