--- a/stats.html
+++ b/stats.html
@@ -1,8 +1,22 @@
 ---
-layout: default
+layout: none
 title: Project 24:42 Stats
 permalink: /stats.html
 ---
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <title>24:42 Project - {{ page.title }}</title>
+      <meta name="viewport" content="width=device-width">
+	  <!-- Custom CSS -->
+      <link rel="stylesheet" href="/css/main.css">
+	  <!-- syntax highlighting CSS -->
+      <link rel="stylesheet" href="/css/syntax.css">
+      <!-- Responsive CSS -->
+      <link rel="stylesheet" href="/css/responsive.css" media="(max-width: 1309px)">
+  </head>
 <style>
 
 body {
@@ -93,4 +107,4 @@ function arcTween(a) {
 
 d3.select(self.frameElement).style("height", height + "px");
 
-</script>
+</script></html>
