--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,8 @@
 ---
-layout: none
+layout: post
 title: Project 24:42 Stats
 permalink: /stats.html
+categories: posts
 ---
 <!DOCTYPE html>
 <html>
