--- a/stats.html
+++ b/stats.html
@@ -2,7 +2,7 @@
 layout: default
 title: Project 24:42 Stats
 ---
-
+<script src="https://d3js.org/d3.v4.js"></script>
 <h3>D3.js Pie Chart Using YAML and Jekyll</h3>
 <p>This is a <a href="https://d3js.org/">D3.js pie chart that is driven from dynamically generated JSON, derived from YAML stored in the _data folder within this Github Pages repository running Jekyll. The goal is to provide a simple, reverse-engineerable example of how YAML can be used to drive visualizations, allowing anyone to fork and re-purpose for thei rown needs.</p>
 <div id="chart"></div>
