--- a/stats.html
+++ b/stats.html
@@ -3,11 +3,7 @@ layout: post
 title: Project 24:42 Stats
 ---
 <script src="https://d3js.org/d3.v3.js"></script>
-<h3>D3.js Pie Chart Using YAML and Jekyll</h3>
-<p>This is a <a href="https://d3js.org/">D3.js pie chart that is driven from dynamically generated JSON, derived from YAML stored in the _data folder within this Github Pages repository running Jekyll. The goal is to provide a simple, reverse-engineerable example of how YAML can be used to drive visualizations, allowing anyone to fork and re-purpose for thei rown needs.</p>
-<div id="chart"></div>
-<p>The YAML can be found in <a href="https://github.com/kinlane/d3-js-using-yaml-jekyll/tree/gh-pages/_data" target="_blank">_data/pie-chart.yaml</a>, but is transformed into the JSON needed for this chart, using <a href="https://github.com/kinlane/d3-js-using-yaml-jekyll/blob/gh-pages/data/pie-chart.json" target="_blank">/data/pie-chart.json</a>. You can fork the repo, and make work with your own data, and keep the YAML as the central, machine readable source. My objective is to decouple the data source from the visualiation, and leverage the readability of YAML + Jekyll + Github Pages for making data accessible.</p>
-
+<h3>Opgeloste Kwetsbaarheden</h3>
 <style>
 /* Pie Chart */
 .arc text {
@@ -58,4 +54,3 @@ function type(d) {
   return d;
 }
 </script>
-<p></p>
