--- a/stats.html
+++ b/stats.html
@@ -1,9 +1,11 @@
 ---
-layout: default
+layout: post
 title: Project 24:42 Stats
 ---
 <script src="https://d3js.org/d3.v3.js"></script>
-<h3>Opgeloste Kwetsbaarheden</h3>
+<h1>Opgeloste Kwetsbaarheden</h1>
+<div id="chart"></div>
+
 <style>
 /* Pie Chart */
 .arc text {
@@ -54,3 +56,4 @@ function type(d) {
   return d;
 }
 </script>
+<p></p>
