--- a/stats.html
+++ b/stats.html
@@ -1,6 +1,7 @@
 ---
-layout: post
+layout: default
 title: Project 24:42 Stats
+permalink: /stats.html
 ---
 <script src="https://d3js.org/d3.v3.js"></script>
 <h1>Opgeloste Kwetsbaarheden</h1>
