--- a/stats.html
+++ b/stats.html
@@ -3,6 +3,7 @@ layout: default
 title: Project 24:42 Stats
 permalink: /stats.html
 ---
+<center>
 <script src="https://d3js.org/d3.v3.js"></script>
 <h1>Opgeloste Kwetsbaarheden</h1>
 <div id="chart"></div>
@@ -57,4 +58,5 @@ function type(d) {
   return d;
 }
 </script>
+</center>
 <p></p>
