--- a/stats.html
+++ b/stats.html
@@ -6,7 +6,10 @@ permalink: /stats.html
 <center>
 <script src="https://d3js.org/d3.v3.js"></script>
 <h1>Opgeloste Kwetsbaarheden</h1>
-<div id="chart"></div>
+<div {
+    resize: both;
+	id="chart">
+</div>
 
 <style>
 /* Pie Chart */
