--- a/stats.html
+++ b/stats.html
@@ -20,6 +20,11 @@ permalink: /stats.html
 .arc path {
   stroke: #fff;
 }
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
 </style>
 
 <script>
