--- a/stats.html
+++ b/stats.html
@@ -6,10 +6,7 @@ permalink: /stats.html
 <center>
 <script src="https://d3js.org/d3.v3.js"></script>
 <h1>Opgeloste Kwetsbaarheden</h1>
-<div {
-    resize: both;
-	id="chart">
-</div>
+<div id="chart"></div>
 
 <style>
 /* Pie Chart */
@@ -20,16 +17,11 @@ permalink: /stats.html
 .arc path {
   stroke: #fff;
 }
-img {
-    max-width: 100%;
-    height: auto;
-    width: auto\9; /* ie8 */
-}
 </style>
 
 <script>
-var width = 760,
-    height = 400,
+var width = 1024,
+    height = 540,
     radius = Math.min(width, height) / 2;
 var color = d3.scale.ordinal()
     .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
@@ -46,7 +38,7 @@ var svg = d3.select("#chart").append("svg")
     .attr("width", width)
     .attr("height", height)
   .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+    .attr("transform", "translate(" + width / 3 + "," + height / 3 + ")");
 d3.json("/data/pie-chart.json", function(error, data) {
   if (error) throw error;
   var g = svg.selectAll(".arc")
