--- a/stats.html
+++ b/stats.html
@@ -6,8 +6,10 @@ permalink: /stats.html
 <center>
 <script src="https://d3js.org/d3.v3.js"></script>
 <h1>Opgeloste Kwetsbaarheden</h1>
+</center>
+<center>
 <div id="chart"></div>
-
+</center>
 <style>
 /* Pie Chart */
 .arc text {
@@ -58,5 +60,3 @@ function type(d) {
   return d;
 }
 </script>
-</center>
-<p></p>
