--- a/stats.html
+++ b/stats.html
@@ -23,10 +23,10 @@ permalink: /stats.html
 
 <script>
 var width = 855,
-    height = 450,
+    height = 855,
     radius = Math.min(width, height) / 2;
 var color = d3.scale.ordinal()
-    .range(["#0BC5BC", "#0CE88F", "#00FF3E", "#2BE80C", "#94FF01", "#68C50B", "#DBE80C", "#FFE300", "#E8B40C", "#FFA301", "#E86F0C", "#E81E0C"]);
+    .range(["#0bc5bc", "#0ce88f", "#00ff3e", "#2be80c", "#94ff01", "#68c50b", "#dbe80c", "#ffe300", "#e8b40c", "#ffa301", "#e86f0c", "#e81e0c"]);
 var arc = d3.svg.arc()
     .outerRadius(radius - 10)
     .innerRadius(0);
