--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error</title>
     <!-- Mainly CSS -->
-    <link href="/index/static/assets/app-20180125.min.css" rel="stylesheet">
-    <link href="/index/static/css/custom.css" rel="stylesheet">
+    <link href="//static/assets/app-20180125.min.css" rel="stylesheet">
+    <link href="//static/css/custom.css" rel="stylesheet">
 	<!-- favicon -->
-	<link rel="shortcut icon" href="/index/static/assets/img/favicon.ico">
+	<link rel="shortcut icon" href="//static/assets/img/favicon.ico">
 </head>
 <body class="gray-bg">
     <div class="middle-box text-center animated fadeInDown">
@@ -19,11 +19,11 @@
             Sorry, but the page you are looking for has not been found. Try checking the URL for errors, then hit the refresh button on your browser or try something else.
             </p>
             <div>
-                <a class="btn btn-primary" href="/index/">Home</a>
+                <a class="btn btn-primary" href="//">Home</a>
             </div>
         </div>
     </div>
     <!-- Mainly scripts -->
-    <script src="/index/static/assets/app-20180125.min.js"></script>
+    <script src="//static/assets/app-20180125.min.js"></script>
 </body>
 </html>
