--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
             Sorry, but the page you are looking for has not been found. Try checking the URL for errors, then hit the refresh button on your browser or try something else.
             </p>
             <div>
-                <a class="btn btn-primary" href="/index/">Home</a>
+                <a class="btn btn-primary" href="/">Home</a>
             </div>
         </div>
     </div>
